# r1-uav-navigation

./: .gitignore  README.md  pyproject.toml  requirements-colosseum.txt  requirements-dev.txt  requirements.txt
docs/: handover_m10_start.md  handover_m8_classical_planners.md  m10_dynamic_rl_results.md  m12_colosseum_gym_wrapper.md  m12_colosseum_navigation_demo.md  m12_colosseum_setup.md  m12_colosseum_td3_baseline.md  m12_simulator_stack_decision.md  m13_0_baseline_reproducibility.md  m13_2_scene_specification.md  m13_3_static_course_solvability.md  m13_colosseum_capability_probe.md  project_overview.md
scripts/: check_colosseum_capabilities.py  check_colosseum_connection.py  check_continuous_dynamic_env.py  compare_static_dqn_vs_astar.py  evaluate.py  evaluate_astar_static.py  evaluate_colosseum_td3.py  evaluate_dynamic_dqn.py  evaluate_dynamic_dqn_repeated.py  evaluate_static_dqn.py  evaluate_td3_continuous_dynamic.py  evaluate_td3_continuous_dynamic_repeated.py  generate_dqn_vs_td3_comparison_plots.py  manage_colosseum_scene.py  run_colosseum_env_smoke_test.py  run_colosseum_waypoint_demo.py  train_colosseum_td3.py  train_dqn.py  train_dynamic_dqn.py  train_static_dqn.py  train_td3_continuous_dynamic.py  validate_static_course.py  visualize_dynamic_env.py
tests/: test_astar_planner.py  test_config_loader.py  test_continuous_dynamic_uav_env.py  test_dqn_agent.py  test_dynamic_dqn_config.py  test_dynamic_grid_uav_env.py  test_grid_uav_env.py  test_m10_difficulty_configs.py  test_m10_results_documentation.py  test_m10_tuned_configs.py  test_m12_colosseum_uav_env.py  (+18 more)
(+57 files in other folders)
